--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,25 @@
+body {
+  padding: 1.5em;
+}
 
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+.container > * {
+  margin-top: 1em;
+}
+
+button {
+  background: gold;
+  border: none;
+  cursor: pointer;
+  margin: 1em;
+  padding: 1em 3em;
+}
+
+button:hover {
+  opacity: 0.7;
+}
 /* Your CSS Code here. */
