--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,17 @@
-body {
-  padding: 1.5em;
-}
 
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  text-align: center;
-}
-.container > * {
-  margin-top: 1em;
-}
-
-button {
-  background: gold;
-  border: none;
-  cursor: pointer;
-  margin: 1em;
-  padding: 1em 3em;
-}
-
-button:hover {
-  opacity: 0.7;
-}
 /* Your CSS Code here. */
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+.game-container {
+    display: none;
+}
+
+#game-result,
+#round-result {
+    display: none;
+}
